// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentAmountSlider should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium emotion-2"
    >
      <span
        class="MuiSlider-rail emotion-3"
      />
      <span
        class="MuiSlider-track emotion-4"
        style="left: 0%; width: 12.5%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary emotion-5"
        data-index="0"
        style="left: 12.5%;"
      >
        <input
          aria-orientation="horizontal"
          aria-valuemax="5000"
          aria-valuemin="1000"
          aria-valuenow="1500"
          data-index="0"
          max="5000"
          min="1000"
          step="100"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="1500"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`PaymentAmountSlider should render Donate 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium emotion-2"
    >
      <span
        class="MuiSlider-rail emotion-3"
      />
      <span
        class="MuiSlider-track emotion-4"
        style="left: 0%; width: 12.5%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary emotion-5"
        data-index="0"
        style="left: 12.5%;"
      >
        <input
          aria-orientation="horizontal"
          aria-valuemax="5000"
          aria-valuemin="1000"
          aria-valuenow="1500"
          data-index="0"
          max="5000"
          min="1000"
          step="100"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="1500"
        />
      </span>
    </span>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-6"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart emotion-7"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-8"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-9"
          >
            EUR
          </p>
        </div>
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart emotion-10"
          id=":r0:"
          min="10"
          step="any"
          type="number"
          value="15"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline emotion-11"
        >
          <legend
            class="emotion-12"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
